Added Google Sheet support and backup in case unavailable
Added Google Sheet support and backup in case unavailable

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "build": "cp 'src/config.prod.js' 'src/config.js' & rollup -c",
+    "dev": "cp 'src/config.dev.js' 'src/config.js' & rollup -c -w",
     "start": "cross-env HOST=localhost sirv public --single --dev --port 5000"
   },
   "devDependencies": {
